# DraconDev

./: .gitignore  ALL_REPOS_INVENTORY.md  ARCHIVED.md  AUDIT_SCOREBOARD.md  BROWSER_FOLDER_INVENTORY.md  BUSINESS_POSITIONING_STRATEGY.md  CHASING_TWO_BIRDS.md  CHROME_CONSOLE_CHECK.md  CHROME_CONSOLE_UPDATE_REPORT.md  CLA.md  CLEANUP_REPORT.md  CONTRIBUTING.md  CREATOR_STACK.md  CROSS_PLATFORM_ACTION_PLAN.md  DIRECTION.md  DRACON_UTILITIES_FEATURE_DECISION.md  EFFECTIVENESS_SCORING.md  EXPERT_VALIDATION.md  EXTERNAL_PLATFORM_UPDATE_SNIPPETS.md  FEATURE_PRIORITIZATION.md  FLEET_STACK.md  GITHUB_PIN_UPDATE_BLOCKED_AUDIT.md  GITHUB_PIN_UPDATE_INSTRUCTIONS.md  GITHUB_PROFILE_BROWSER_AUDIT.md  GITHUB_PROFILE_RESEARCH.md  GITHUB_SPONSORS_PROFILE_COPY.txt  GO_NO_GO_REPORT.md  GRAVEYARD.md  LICENSE  LOCAL_PROJECT_PIN_README_CANDIDATES.md  MAKER_POSITIONING_FINAL_REPORT.md  MAKER_PRODUCT_PROFILE_RESEARCH.md  MAKER_PRODUCT_PROFILE_SCORES.md  MAKER_PRODUCT_README_RECOMMENDATION.md  MAKER_PROFILE_POSITIONING.md  MIGRATION.md  NAMING_AUDIT.md  PIN_FEATURE_ANALYSIS.md  POSITIONING.md  POSITIONING_APPROVAL.md  (+41 more)
.dracon/: project-state.md
.github/workflows/: cla.yml
.pi/goals/: active_goal_2026053120382201_mpu6my0v-l6m3vf.md  active_goal_2026053123034363_mpubtvo2-qdoycj.md  active_goal_2026060101493244_mpuhr47x-tbjldj.md  (+8 more)
.ralph/: readme-update.md  readme-update.state.json
dracon-ai-sdk/: Cargo.toml  README.md
dracon-ai-sdk/examples/: basic_chat.rs
dracon-ai-sdk/src/: error.rs  lib.rs  types.rs
dracon-ai-sdk/tests/: integration.rs
(+16 files in other folders)
