[package]
name = "dracon-ai-sdk"
version = "0.1.0"
edition = "2021"
description = "Lightweight HTTP client for the Dracon AI API. Consumers depend on this instead of the AI lib directly."
license = "AGPL-3.0-only"
repository = "https://github.com/DraconDev/dracon-ai-sdk"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
thiserror = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
